@@ -4,6 +4,10 @@
 =======================================================
 
 
+Oct 11 2011     datafile_urot input var added to blc2wan, to allow for and extra
+		unitary rotation to be plugged in. do_cmplxconjg var added to fix
+		an old bug in SaX. (AF)
+
 Apr 19 2011     memusage routines added to transport and embed. 
 		Problem with ne_buffer fixed (wasn't it already). (AF)
 
@@ -25,7 +29,7 @@ Dec 07 2010     Cleanup in embed and transport. vars for correlation sgm's
 		Test03 updated including a case study of the Klein paradox. (AF)
 
 Nov 24 2010     iwin_max, iwin_min, ifroz_max, ifroz_min renamed as
-		iwin_maxk, iwin_mink, etc.
+		iwin_kmax, iwin_kmin, etc.
 		iwin_max, iwin_min, ifroz_max, ifroz_min vars added
 		with the meaning to work on all the kpts. (AF)
 
